--- a/www/docencia.html
+++ b/www/docencia.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Pestañas verticales balanceadas</title>
-  <link rel="stylesheet" href="www/docencia.css">
+  <link rel="stylesheet" href="www/css/docencia.css">
 </head>
 <body>
 
