--- a/www/docencia.html
+++ b/www/docencia.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Pestañas verticales balanceadas</title>
+<title>Docencia</title>
   <link rel="stylesheet" href="/www/docencia.css">
 </head>
 <body>
