--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="panels">
         <!-- Panel 1: Inicio -->
         <div class="panel panel1">
-          <p style="text-align:center; font-family:Garamond; font-weight:500; font-size:2.5rem; color:#0f4d92; margin-bottom:0rem; line-height:1.1; opacity:0; transform:translateY(10px); animation:aparecer 1.2s ease-out forwards;">
+          <p style="text-align:center; font-family:Georgia; font-weight:500; font-size:2.5rem; color:#0f4d92; margin-bottom:0rem; line-height:1.1; opacity:0; transform:translateY(10px); animation:aparecer 1.2s ease-out forwards;">
             Alejandro Pulgarín-Franco<br>
             <span style="display:block; font-family:Palatino; font-weight:400; font-size:1.1rem; color:#000; margin-top:0.1rem;">Docente, investigador y consultor</span>
           </p>
@@ -156,17 +156,17 @@
               <br>
               <hr class=decorativo>
               <br>
-              <div><iframe width="100%" height="525" src="https://datastudio.google.com/embed/reporting/425e2f6b-a9a8-4123-a27c-eede8b6191b9/page/9b28C" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <div><iframe width="700" height="525" src="https://datastudio.google.com/embed/reporting/425e2f6b-a9a8-4123-a27c-eede8b6191b9/page/9b28C" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
               <br>
               <hr class=decorativo>
               <br>
-              <div><iframe width="100%" height="525" src="https://lookerstudio.google.com/embed/reporting/028e9df4-d24c-42a7-8089-7e719d781c2b/page/Ysj1D" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
+              <div><iframe width="700" height="525" src="https://lookerstudio.google.com/embed/reporting/028e9df4-d24c-42a7-8089-7e719d781c2b/page/Ysj1D" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
               </div>
               <br>
               <hr class=decorativo>
               <br>
-              <div><iframe width="100%" height="525" src="https://lookerstudio.google.com/embed/reporting/36a554e1-41d2-4a3e-bb04-b3369108c3c5/page/p_chqmpd8r6c" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <div><iframe width="700" height="525" src="https://lookerstudio.google.com/embed/reporting/36a554e1-41d2-4a3e-bb04-b3369108c3c5/page/p_chqmpd8r6c" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
             </div>
           </div>
