--- a/index.html
+++ b/index.html
@@ -151,22 +151,22 @@
               <h1 class= "h1-titulo">Datos y visualizaciones</h1>
               <hr class= "style1">
               <p>En este espacio pueden observar algunos tableros de visualización de datos, también tengo un sitio web en el que pueden consultar más tableros de este tipo llamado<a href= "https://sites.google.com/view/portalpublico/página-principal"> Portal Público</a> </p>
-              <div><iframe width="100%" height="525" src="https://datastudio.google.com/embed/reporting/5a813814-2a8b-4885-adc4-ff0cf88f8007/page/Hu16C" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <div><iframe width="100%" height="525" src="https://datastudio.google.com/embed/reporting/5a813814-2a8b-4885-adc4-ff0cf88f8007/page/Hu16C" loading="lazy" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
               <br>
               <hr class=decorativo>
               <br>
-              <div><iframe width="700" height="525" src="https://datastudio.google.com/embed/reporting/425e2f6b-a9a8-4123-a27c-eede8b6191b9/page/9b28C" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <div><iframe width="700" height="525" src="https://datastudio.google.com/embed/reporting/425e2f6b-a9a8-4123-a27c-eede8b6191b9/page/9b28C" loading="lazy" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
               <br>
               <hr class=decorativo>
               <br>
-              <div><iframe width="700" height="525" src="https://lookerstudio.google.com/embed/reporting/028e9df4-d24c-42a7-8089-7e719d781c2b/page/Ysj1D" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
+              <div><iframe width="700" height="525" src="https://lookerstudio.google.com/embed/reporting/028e9df4-d24c-42a7-8089-7e719d781c2b/page/Ysj1D" loading="lazy" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
               </div>
               <br>
               <hr class=decorativo>
               <br>
-              <div><iframe width="700" height="525" src="https://lookerstudio.google.com/embed/reporting/36a554e1-41d2-4a3e-bb04-b3369108c3c5/page/p_chqmpd8r6c" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <div><iframe width="700" height="525" src="https://lookerstudio.google.com/embed/reporting/36a554e1-41d2-4a3e-bb04-b3369108c3c5/page/p_chqmpd8r6c" loading="lazy" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
             </div>
           </div>
