--- a/www/docencia.html
+++ b/www/docencia.html
@@ -17,16 +17,18 @@
   <input type="radio" name="tabs" id="tab5">
   <input type="radio" name="tabs" id="tab6">
   <input type="radio" name="tabs" id="tab7">
+  <input type="radio" name="tabs" id="tab8">
 
   <!-- Pestañas (columna izquierda) -->
   <div class="sidebar">
     <label for="tab1">Gobierno y política pública</label>
     <label for="tab2">Política pública territorial</label>
-    <label for="tab3">Organización del Estado colombiano</label>
-    <label for="tab4">Planeación del desarrollo</label>
-    <label for="tab5">Convivencia y participación ciudadana</label>
-    <label for="tab6">Historia de la administración pública</label>
-    <label for="tab7">Otras asignaturas</label>
+    <label for="tab3">Políticas y gestión ambiental en Colombia</label>
+    <label for="tab4">Organización del Estado colombiano</label>
+    <label for="tab5">Planeación del desarrollo</label>
+    <label for="tab6">Convivencia y participación ciudadana</label>
+    <label for="tab7">Historia de la administración pública</label>
+    <label for="tab8">Otras asignaturas</label>
     
   </div>
 
@@ -44,6 +46,13 @@
       <p>Ofrecer los elementos conceptuales y metodológicos para el análisis de las políticas públicas en las Entidades Territoriales como célula básica de la división político-administrativa del Estado, en un contexto de complejidad social y heterogéneo que da lugar a políticas públicas únicas. Esto a partir de dos temáticas orientadoras: el análisis de las políticas públicas con enfoque territorial; y la organización territorial y su orientación e instrumentación de las políticas públicas.</p>
       <p>La información de la asignatura y el desarrollo de las actividades puede ser consultada <a href= "https://pregradoesap.esap.edu.co/local/didactic_login/" target="_blank"> acá </a></p>
       <p>Esta asignatura es parte del antiguo plan de estudios aprobado por Acuerdo 3 de 2014, con el nuevo programa aprobado por Acuerdo 2 de 2023 pasó a ser parte de Gobierno y políticas públicas.</p>
+    </div>
+
+    <div id="ambiental" class="tab-content">
+      <h2>Políticas y gestión ambiental en Colombia</h2>
+      <p>Formar profesionales capaces de analizar críticamente las problemáticas ambientales contemporáneas desde una perspectiva integral, que combine los fundamentos ecológicos con los marcos jurídicos, políticos y administrativos de la gestión ambiental en Colombia.</p>
+      <p>La información de la asignatura y el desarrollo de las actividades puede ser consultada <a href= "https://pregradoesap.esap.edu.co/local/didactic_login/" target="_blank"> acá </a></p>
+      <p>Nueva asignatura del plan de estudios aprobada por el Acuerdo 02 de 2023.</p>
     </div>
 
     <div id="estado" class="tab-content">
